# ExoSuit

./: .gitignore  README.md  data_colection_tutorial.md  patch.diff
exo_publisher/src/data_collection/: CMakeLists.txt  package.xml
exo_publisher/src/data_collection/launch/: joycon_bag_recorder.launchy
exo_publisher/src/grip_control/: CMakeLists.txt
exo_publisher/src/grip_control/launch/: joycon_grip_control.launch  joycon_hand_publisher.launch
exo_publisher/src/grip_control/scripts/: joycon_grip_control.py  joycon_hand_publisher.py
exo_publisher/src/grip_control/src/: kuavoSDK.py
install/: setup.sh  (+1 more)
isaac_lab_data_collection/install/dynamic_biped/share/dynamic_biped/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_lab_data_collection/install/dynamic_biped/share/dynamic_biped/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dynamic_bipedConfig-version.cmake  dynamic_bipedConfig.cmake  dynamic_biped__rosidl_typesupport_cExport-noconfig.cmake  dynamic_biped__rosidl_typesupport_cppExport.cmake  dynamic_biped__rosidl_typesupport_introspection_cExport-noconfig.cmake  dynamic_biped__rosidl_typesupport_introspection_cppExport-noconfig.cmake  dynamic_biped__rosidl_typesupport_introspection_cppExport.cmake  export_dynamic_biped__rosidl_generator_cExport.cmake  export_dynamic_biped__rosidl_generator_cppExport.cmake  export_dynamic_biped__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_dynamic_biped__rosidl_typesupport_fastrtps_cExport.cmake  export_dynamic_biped__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
isaac_lab_data_collection/install/dynamic_biped/share/dynamic_biped/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
isaac_lab_data_collection/install/dynamic_biped/share/dynamic_biped/msg/: ArmHandPose.idl  ArmHandPose.json  ArmHandPose.msg  ECJointMotordata.idl  ECJointMotordata.json  ECJointMotordata.msg  HandRotation.idl  HandRotation.json  HandRotation.msg  HandRotationEular.idl  HandRotationEular.json  HandRotationEular.msg  QuaternionArray.idl  QuaternionArray.json  QuaternionArray.msg  RecordArmHandPose.idl  RecordArmHandPose.json  RecordArmHandPose.msg  RobotArmInfo.idl  RobotArmInfo.json  RobotArmInfo.msg  RobotArmQVVD.idl  RobotArmQVVD.json  RobotArmQVVD.msg  RobotHandEff.idl  RobotHandEff.json  RobotHandEff.msg  RobotHandPosition.idl  RobotHandPosition.json  RobotHandPosition.msg  RobotHeadMotionData.idl  RobotHeadMotionData.json  RobotHeadMotionData.msg  RobotPhase.idl  RobotPhase.json  RobotPhase.msg  RobotQVTau.idl  RobotQVTau.json  RobotQVTau.msg  RobotTorsoState.idl  (+5 more)
isaac_lab_data_collection/install/dynamic_biped/share/dynamic_biped/srv/: ChangeAMBACCtrlMode.idl  ChangeAMBACCtrlMode.json  ChangeAMBACCtrlMode.srv  ChangeArmCtrlMode.idl  ChangeArmCtrlMode.json  ChangeArmCtrlMode.srv  ControlEndHand.idl  ControlEndHand.json  ControlEndHand.srv  SrvChangeCtlMode.idl  SrvChangeCtlMode.json  SrvChangeCtlMode.srv  SrvChangeJoller.idl  SrvChangeJoller.json  SrvChangeJoller.srv  SrvChangePhases.idl  SrvChangePhases.json  SrvChangePhases.srv  SrvClearPositionCMD.idl  SrvClearPositionCMD.json  SrvClearPositionCMD.srv  SrvManiInst.idl  SrvManiInst.json  SrvManiInst.srv
isaac_lab_data_collection/install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
isaac_lab_data_collection/install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig-version.cmake  my_robot_descriptionConfig.cmake
isaac_lab_data_collection/install/my_robot_description/share/my_robot_description/config/: joint_names_biped_s45.yaml
isaac_lab_data_collection/install/my_robot_description/share/my_robot_description/environment/: ament_prefix_path.dsv  path.dsv
isaac_lab_data_collection/install/my_robot_description/share/my_robot_description/launch/: display_launch.py  old_display_launch.py  s40_display_launch.py  s40_display_servo.launch.py  s45_display_launch.py
isaac_lab_data_collection/install/my_robot_description/share/my_robot_description/urdf/: biped_s40.urdf  biped_s40_primitives.urdf  biped_s45.urdf
isaac_lab_data_collection/src/dynamic_biped/: CMakeLists.txt
isaac_lab_data_collection/src/dynamic_biped/msg/: RobotArmQVVD.msg  RobotPhase.msg
isaac_lab_data_collection/src/my_robot_description/: CMakeLists.txt  package.xml
isaac_lab_data_collection/src/my_robot_description/launch/: s40_display_launch.py  s45_display_launch.py
isaac_lab_data_collection/src/my_robot_description/meshes/biped_s45_meshes/: D405.stl
isaac_lab_data_collection/src/my_robot_description/meshes/biped_s45_meshes/2f85/: 2f85.xml  inner_finger_fine_new.STL  inner_knuckle_fine_new.STL  (+3 more)
isaac_lab_data_collection/src/my_robot_description/urdf/: biped_s40.urdf  biped_s40_primitives.urdf
isaac_lab_data_collection/src/my_robot_description/urdf/biped_s40/: biped_s40.usd
real_robot_data_collection/src/data_bag_recorder/: CMakeLists.txt  package.xml
real_robot_data_collection/src/data_bag_recorder/launch/: record.launch
real_robot_data_collection/src/data_bag_recorder/scripts/: data_bag_recorder.py
real_robot_data_collection/src/dynamic_biped/: CMakeLists.txt
real_robot_data_collection/src/dynamic_biped/msg/: armHandPose.msg  robotArmQVVD.msg
real_robot_data_collection/src/dynamic_biped/srv/: srvManiInst.srv
real_robot_data_collection/src/grip_state_publisher/: CMakeLists.txt  package.xml
real_robot_data_collection/src/grip_state_publisher/launch/: grip_state.launch
real_robot_data_collection/src/servo_angle_publisher/: CMakeLists.txt  package.xml
real_robot_data_collection/src/servo_angle_publisher/launch/: servo_angle.launch
(+1200 files in other folders)
