<?xml version="1.0"?>
<package format="2">
  <name>data_collection</name>
  <version>0.0.1</version>
  <description>Joy-Con controlled rosbag recorder</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_biped</depend>
  <depend>joyconrobotics</depend>
</package>