<?xml version="1.0"?>
<package format="2">
  <name>servo_angle_publisher</name>
  <version>0.0.1</version>
  <description>Servo angle publisher with Joy-Con A button toggle</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joyconrobotics</depend>
</package>

