<?xml version="1.0"?>
<package format="3">
  <name>dynamic_biped</name>
  <version>0.0.1</version>
  <description>Messages and services for Kuavo biped robot control (ROS2)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>HIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
