<?xml version="1.0"?>
<package format="3">
  <name>servo_angle_publisher</name>
  <version>0.0.1</version>
  <description>Servo angle publisher (ROS 2)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joyconrobotics</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

